fixed css overflow on blogs

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -174,6 +174,7 @@ body {
     margin: auto;
     overflow: hidden;
     .page{
+      overflow: hidden;
       @media #{$medium-only} {
         width: 45%;
         height: 480px;
@@ -240,8 +241,9 @@ body {
       .article{
         font-family: 'Lato';
         padding-bottom: 20px;
-        // overflow: hidden;
+        overflow: hidden;
         p{
+          overflow: hidden;
           // background-color: red;
           @media #{$medium-up} { 
             max-height: 80px;
